vue webapp stub
