# products-service/routes.ts
@@ -9,7 +9,7 @@ import * as express from 'express';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
-    "Customer": {
+    "CustomersList": {
         "dataType": "refObject",
         "properties": {
             "id": { "dataType": "string", "required": true },
